src/tests/if_expression/snapshots/monkey_interpreter__tests__if_expression__test_if_expression_case_1_syntax_analysis.snap
---
source: src/tests/if_expression/mod.rs
expression: abstract_syntax_tree
---
[
    Expression {
        expression: If {
            condition: Infix {
                left_hand: Integer {
                    literal: 10,
                },
                operator: GreaterThan,
                right_hand: Integer {
                    literal: 1,
                },
            },
            consequence: Block {
                nodes: [
                    Expression {
                        expression: If {
                            condition: Infix {
                                left_hand: Integer {
                                    literal: 10,
                                },
                                operator: GreaterThan,
                                right_hand: Integer {
                                    literal: 1,
                                },
                            },
                            consequence: Block {
                                nodes: [
                                    Statement {
                                        statement: Return {
                                            expression: Boolean {
                                                literal: true,
                                            },
                                        },
                                    },
                                ],
                            },
                            alternative: None,
                        },
                    },
                    Statement {
                        statement: Return {
                            expression: Boolean {
                                literal: false,
                            },
                        },
                    },
                ],
            },
            alternative: None,
        },
    },
]
