src/tests/if_expression/snapshots/monkey_interpreter__tests__if_expression__test_if_expression_case_8_syntax_analysis.snap
---
source: src/tests/if_expression/mod.rs
expression: abstract_syntax_tree
---
[
    Expression {
        expression: If {
            condition: Infix {
                left_hand: Integer {
                    literal: 4,
                },
                operator: GreaterThan,
                right_hand: Integer {
                    literal: 6,
                },
            },
            consequence: Block {
                nodes: [
                    Expression {
                        expression: Boolean {
                            literal: true,
                        },
                    },
                ],
            },
            alternative: Some(
                Block {
                    nodes: [
                        Expression {
                            expression: Boolean {
                                literal: false,
                            },
                        },
                    ],
                },
            ),
        },
    },
]
